# spotify_to_tidal

./: .pre-commit-config.yaml  pyproject.toml  pytest.ini  readme.md
.circleci/: config.yml
src/spotify_to_tidal/: __main__.py  auth.py  cache.py  logfile.py  matching.py  ratelimit.py  spotify_api.py  sync.py  tidalapi_patch.py
src/spotify_to_tidal/type/: __init__.py  config.py
tests/unit/: test_artist_harvest.py  test_auth.py  test_cache.py  test_consolidated_logging.py  test_fetch_chunks.py  test_playlist_add.py  test_retry.py  test_retry_on_412.py  test_sync_artists_orchestration.py
