[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_to_tidal"
version = "1.0.7"
requires-python = ">= 3.10"

dependencies = [
  "spotipy~=2.24",
  "tidalapi~=0.8.10",
  "pyyaml~=6.0",
  "tqdm~=4.64",
  "sqlalchemy~=2.0",
  "pytest~=8.0",
  "pytest-mock~=3.8"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["spotify_to_tidal*"]

[project.scripts]
spotify_to_tidal = "spotify_to_tidal.__main__:main"

[dependency-groups]
dev = ["ruff>=0.15", "ty", "pre-commit>=4.0"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python-version = "3.10"
